# BPX

./: CMakeLists.txt  README.md
examples/: sdl_example.cpp
include/BPX/: BPX.hpp  algorithm.hpp  color.hpp  generation.hpp  image.hpp  pixel.hpp  ramp.hpp
src/: algorithm.cpp  generation.cpp  image.cpp
